--- a/src/sass/application.scss
+++ b/src/sass/application.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
 /*==========  Includes  ==========*/
 @import '_includes/functions';
 @import '_includes/fonts';
