--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Snug
+Theme Name: Snug Starter Theme
 Theme URI: https://thesnug.io
 Author: The Snug
 Author URI: https://thesnug.io
 Description: Starter WordPress theme for The Snug projects.
-Version: 1.0.0
+Version: 3.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: snug
